Fix footer overflow

--- a/themes/evictionlab/assets/sass/_footer.scss
+++ b/themes/evictionlab/assets/sass/_footer.scss
@@ -168,7 +168,7 @@ footer {
 @media(min-width: $gtTablet) {
   .footer-content {
     width: grid(107);
-    height: 334px;
+    height: 340px;
   }
 }
 @media(min-width: $gtLaptop) {
